# olmo-api

./: .dockerignore  .env.test  .git-blame-ignore-revs  .gitignore  Dockerfile  README.md  alembic.ini  app.py  conftest.py  dev-safety-worker.sh  dev.sh  docker-compose.yaml  justfile  otel-collector-config.yaml  pyproject.toml  requirements.txt  safety-worker.Dockerfile  skiff.json  start-safety-worker.sh  start.sh  test.config.json
apps/api/: Dockerfile  main.py  pyproject.toml
apps/api/e2e/: base.py  conftest.py  create_test_thread.py  test_auth.py  test_models.py  test_prompt_templates.py  test_threads.py  test_user.py  test_user_migration.py
apps/api/src/api/: config.py  health.py  service_errors.py  v5.py
apps/api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/api/admin/: admin_router.py
apps/api/src/api/async_message_repository/: async_message_repository.py
apps/api/src/api/auth/: auth_service.py  permission_service.py
apps/api/src/api/db/: sqlalchemy.py  sqlalchemy_engine.py
apps/api/src/api/event/: __init__.py  event_router.py
apps/api/src/api/logging/: __init__.py  fastapi_logger.py  middleware.py  setup.py
apps/api/src/api/model_config/: model_config_request.py  model_config_response.py  model_config_response_model.py  model_config_utils.py
apps/api/src/api/prompt_template/: prompt_template_router.py  prompt_template_service.py
apps/api/src/api/thread/: thread_delete_service.py  thread_read_service.py  thread_router.py
apps/api/src/api/user/: hubspot_service.py  user_migration_service.py  user_router.py  user_service.py  user_who_am_i_service.py
apps/fast-api/: Dockerfile  app.py  pyproject.toml
apps/fast-api/src/: config.py  health.py  logging.py
apps/fast-api/src/logging/: __init__.py
apps/playground-api/: Dockerfile  app.py  conftest.py  main.py  pyproject.toml
apps/playground-api/db_migrations/: env.py
apps/playground-api/db_migrations/versions/: 5e909ac87a6c_mcp.py  6800257e41d6_add_info_url_to_model_config.py  ea686b7953cb_fill_out_model_config.py  f34d2db4d75d_add_a_tool_calling_capability_field_to_.py
apps/playground-api/e2e/: test_completion.py  test_message_datachips.py  test_models.py  test_template.py
apps/playground-api/src/: constants.py  error.py  test_message_database_setup.py  v3.py
apps/playground-api/src/attribution/: attribution_blueprint.py  attribution_service.py  flatten_spans.py  test_flatten_spans.py
apps/playground-api/src/auth/: auth_service.py
apps/playground-api/src/bot_detection/: create_assessment.py
apps/playground-api/src/config/: Config.py  Model.py  get_config.py  get_models.py  test_Model.py
apps/playground-api/src/dao/: datachip.py  label.py  template.py  user.py
apps/playground-api/src/dao/engine_models/: completion.py  label.py  message.py  model_config.py  prompt_template.py  test_message_database_setup.py  tool_call.py  tool_definitions.py
apps/playground-api/src/db/: init_sqlalchemy.py
apps/playground-api/src/message/: SafetyChecker.py  create_message_request.py  format_messages_output.py  message_chunk.py  test_create_message.py  test_validate_message_files_from_config.py  validate_message_files_from_config.py
apps/playground-api/src/model_config/: base_model_config.py  get_model_config_service.py  model_config_utils.py  reorder_model_config_service.py  response_model.py  update_model_config_service.py
apps/playground-api/src/otel/: default_tracer.py
apps/playground-api/src/prompt_template/: prompt_template_models.py  prompt_template_repository.py
apps/playground-api/src/pydantic_inference/: pydantic_ai_helpers.py
apps/playground-api/src/safety_queue/: set_up_safety_queue.py  video_safety_handler.py
apps/playground-api/src/thread/: test_thread_models.py  thread_models.py
apps/playground-api/src/tools/: internal_tools_service.py  mcp_service.py  tools_service.py
apps/playground-api/src/user/: test_user_migrate.py
apps/playground-api/src/util/: __init__.py  generator_with_return_value.py
(+576 files in other folders)
