[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "asgi-correlation-id>=4.3.4",
    "authlib>=1.3.2",
    "core",
    "db",
    "fastapi-problem>=0.11.6",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "psycopg[binary]>=3.3.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog-gcp>=0.5.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
extend = "../../pyproject.toml"

[tool.uv.sources]
db = { workspace = true }
core = { workspace = true }

[dependency-groups]
dev = [
    "rich>=13.9.4",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.25.2",
    "pytest-postgresql>=7.0.2",
]
