[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi-problem>=0.11.6",
    "fastapi-structlog>=0.7.0",
    "fastapi[standard]>=0.128.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "pydantic-settings>=2.12.0",
]
