[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi-problem>=0.11.6",
    "fastapi[standard]>=0.128.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "pydantic-settings>=2.12.0",
    "structlog-gcp>=0.5.0",
]
