[project]
name = "playground-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "alembic==1.15.2",
    "alembic-postgresql-enum==1.7.0",
    "authlib==1.3.2",
    "beaker-py==2.5.0",
    "beautifulsoup4==4.12.2",
    "dramatiq[redis,watch]==2.0.0",
    "flask==2.3.3",
    "flask-pydantic-api==1.7.0",
    "google-cloud-language==2.15.0",
    "google-cloud-recaptcha-enterprise==1.27.0",
    "google-cloud-storage==2.19.0",
    "google-cloud-videointelligence==2.17.0",
    "google-cloud-vision==3.9.0",
    "gunicorn==23.0.0",
    "inferd",
    "infini-gram-api-client",
    "mcp==1.13.1",
    "modal==1.0.3",
    "openai==1.107.2",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-gcp-trace==1.10.0",
    "opentelemetry-exporter-otlp==1.38.0",
    "opentelemetry-instrumentation-flask==0.59b0",
    "opentelemetry-instrumentation-httpx==0.59b0",
    "opentelemetry-instrumentation-psycopg==0.59b0",
    "opentelemetry-instrumentation-requests==0.59b0",
    "opentelemetry-instrumentation-sqlalchemy==0.59b0",
    "opentelemetry-instrumentor-dramatiq==0.1.2",
    "opentelemetry-sdk==1.38.0",
    "prometheus-client==0.23.1",
    "psycopg[binary,pool]==3.3.0",
    "puremagic==1.28.0",
    "pydantic==2.11.5",
    "pydantic-ai==1.0.18",
    "pydub==0.25.1",
    "python-dateutil>=2.8.0",
    "python-dotenv==1.0.1",
    "python-json-logger==2.0.7",
    "rank-bm25==0.2.2",
    "requests==2.32.4",
    "sqlalchemy==2.0.44",
]

[dependency-groups]
dev = [
    "pytest==8.3.2",
    "pytest-mock==3.15.1",
    "pytest-postgresql==7.0.2",
    "time-machine==2.16.0",
    "types-beautifulsoup4==4.12.0.20250204",
    "types-protobuf==5.29.1.20250208",
    "types-requests==2.32.0.20240914",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test that can use the DB",
]

[[tool.mypy.overrides]]
module = ["infini_gram_api_client"]
ignore_errors = true


[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = ["PLC1901", "PLR2004", "PLR6301", "S", "TID252"]
"__init__.py" = ["PLC0414"]
"src/dao/engine_models/*.py" = ["RUF012"]
"db_migrations/*.py" = ["INP001"]
